<resources>
    <string name="app_name">FriendLens</string>
    <string name="slogan">Freely share personal photos and build connections only with your real friends.</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_in">Sign in</string>
    <string name="image_view">Image view</string>
    <string name="what_is_your_email_address">What\'s your email address?</string>
    <string name="email_address">Email address</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="_continue">Continue</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="rather_not_say">Rather not say</string>
    <string name="what_s_your_gender">What\'s your gender?</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username">Username</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="when_is_your_birthday">When is your birthday?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="terms_of_service_and_privacy_policy">By tapping continue, you are agreeing to our Terms of Service and Privacy Policy</string>
    <string name="default_web_client_id">443313506463-mtngg627ldcke2mshtng8onnu02e30ek.apps.googleusercontent.com</string>
    <string name="main_camera">Main camera</string>
    <string name="take_photo">Take Photo</string>
    <string name="toggle_flash">Flash toggle button</string>
    <string name="message">Message</string>
    <string name="account">Account</string>
    <string name="flip_camera">Flip camera</string>
    <string name="gallery">Gallery</string>
    <string name="history">History</string>
    <string name="feeds">Feeds</string>
    <string name="feed_images">Feed images</string>
    <string name="location_icon">Location icon</string>
    <string name="john_doe">John Doe</string>
    <string name="in_ha_noi_city">In Ha Noi City</string>
    <string name="this_is_a_example_text_to_display_post_caption">This is a example text to display post caption</string>
    <string name="post_image_view">Post image</string>
    <string name="enter_text_to_search">Enter text to search</string>
    <string name="_2_hours_ago">2d</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="_new">New</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>
    <string name="activity_screen">Activity screen</string>
    <string name="new_feed_screen">New feed screen</string>
    <string name="profile_screen">Profile screen</string>
    <string name="home_screen">Home screen</string>
    <string name="search_screen">Search screen</string>
    <string name="lorem">It is a long established fact.</string>
    <string name="_100">100</string>
    <string name="send_message">Send message</string>
    <string name="you_hello_john">You: Hello John!</string>
    <string name="general">General</string>
    <string name="pics">Pics</string>
    <string name="pictures">Pictures</string>
    <string name="submit">Submit</string>
    <string name="post_this_moment">Post this moment</string>
</resources>