<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_xl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shimmer_auto_start="true"
            app:shimmer_base_alpha="0.6"
            app:shimmer_direction="left_to_right"
            app:shimmer_dropoff="0.5"
            app:shimmer_duration="2000"
            app:shimmer_highlight_alpha="1.5"
            app:shimmer_intensity="0.7"
            app:shimmer_shape="linear"
            app:shimmer_tilt="25">

            <TextView
                style="?attr/textAppearanceDisplayLargeEmphasized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textStyle="bold" />
        </com.facebook.shimmer.ShimmerFrameLayout>


        <TextView
            style="?attr/textAppearanceBodyLargeEmphasized"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_with_google_button"
            style="?attr/materialButtonTonalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2xl"
            android:text="@string/continue_with_google"
            app:icon="@drawable/google"
            app:iconTint="@null"
            app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.Medium.Square" />

        <TextView
            style="?attr/textAppearanceBodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_lg"
            android:paddingVertical="@dimen/padding_xs"
            android:text="@string/terms_of_service_and_privacy_policy"
            android:textAlignment="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>