<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.CameraFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/camera_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="44dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.camera.view.PreviewView
            android:id="@+id/preview_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:scaleType="fillCenter" />
    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/camera_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="@dimen/padding_md"
        android:paddingBottom="@dimen/padding_lg"
        app:layout_constraintTop_toBottomOf="@id/camera_container">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/flash_button"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/toggle_flash"
            app:icon="@drawable/flash_off"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Medium.Wide" />

        <!-- Center Capture Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/capture_button"
            style="?attr/materialIconButtonFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_camera"
            app:icon="@drawable/camera"
            app:iconSize="@dimen/icon_xl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Medium" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/flip_camera_button"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/flip_camera"
            app:icon="@drawable/flip_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Medium.Wide" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/bottom_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera_control"
        app:shimmer_auto_start="true"
        app:shimmer_base_alpha="0.6"
        app:shimmer_direction="left_to_right"
        app:shimmer_dropoff="0.5"
        app:shimmer_duration="2000"
        app:shimmer_highlight_alpha="1.5"
        app:shimmer_intensity="0.7"
        app:shimmer_shape="linear"
        app:shimmer_tilt="25">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3Expressive.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/feeds"
            android:textSize="@dimen/text_xl"
            app:icon="@drawable/keyboard_double_arrow_up"
            app:iconGravity="top"
            app:iconSize="@dimen/icon_lg" />

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>